@@ -9,13 +9,14 @@ CIMSCHEMA_SOURCE=${CIMSCHEMA_SOURCE:-@CIMSCHEMA_SOURCE@}
 CIMSCHEMA_MOF=${CIMSCHEMA_MOF:-@CIMSCHEMA_MOF@}
 CIMSCHEMA_SUBDIRS=${CIMSCHEMA_SUBDIRS:-@CIMSCHEMA_SUBDIRS@}
 
-MOFZIPURL=${CIMSCHEMA_SOURCE:-"http://www.dmtf.org/standards/cim/cim_schema_v29/CIM_V2.9.0Final-MOFs.zip"}
-SCHEMAMOF=${CIMSCHEMA_MOF:-CIM_Schema.mof}
-if [ x$CIMSCHEMA_SUBDIRS = x ]
+MOFZIPURL=${CIMSCHEMA_SOURCE:-"http://www.dmtf.org/standards/cim/cim_schema_v217/cimv217Final-MOFs.zip"}
+SCHEMAMOF=${CIMSCHEMA_MOF:-cimv217.mof}
+
+# zip file for schema v2.17 (and others) contain subdirectories.  v2.9 does not
+HASSUBDIRS=yes
+if [ $CIMSCHEMA_SUBDIRS = no ]
 then
     HASSUBDIRS=no
-else
-    HASSUBDIRS=yes
 fi
 
 TMPZIP=/tmp/cimmof.zip
