@@ -6,6 +6,7 @@ New features:
   in the providerRegister
 - 1560680 property operations supported now
 - 1830770 disallow external http connections
+- 1894061 Allow sfcb to use updated versions of the CIM Schema. 2.17 is default
 
 Bugs fixed:
 - 1793223 Fixed cross-built ClProperty size mismatch
